<resources>
    <string name="app_name">AppAreaVolumen</string>

    <string name="titulo_opciones">OPCIONES</string>
    <string name="opcion_area">AREAS</string>
    <string name="opcion_volumen">VOLÚMENES</string>
    <string name="opcion_operaciones_realizadas">OPERACIONES REALIZADAS</string>

    <string name="opcion_cuadrado">CUADRADO</string>
    <string name="opcion_rectangulo">RECTANGULO</string>
    <string name="opcion_triangulo">TRIANGULO</string>
    <string name="opcion_circulo">CIRCULO</string>

    <string name="opcion_esfera">ESFERA</string>
    <string name="opcion_cilindro">CILINDRO</string>
    <string name="opcion_cono">CONO</string>
    <string name="opcion_cubo">CUBO</string>
    <string name="lbl_valor_lado">Valor del Lado</string>
    <string name="valor_lado">Valor del Lado</string>
    <string name="boton_calcular">Calcular</string>
    <string name="boton_borrar">Borrar</string>
    <string name="resultado">Resultado</string>
    <string name="txt_base">Base</string>
    <string name="lbl_altura">Altura</string>
    <string name="lbl_res_area">Area</string>

    <string name="error_lado">El valor introducido como Lado no es valido</string>
    <string name="error_base">El valor introducido como Base no es valido</string>
    <string name="error_altura">El valor introducido como Altura no es valido</string>
    <string name="error_radio">El valor introducido como Radio no es valido</string>
    <string name="error_arista">El valor introducido como Arista no es valido</string>

    <string name="radio">Radio</string>
    <string name="lbl_volumen">Volumen</string>
    <string name="arista">Arista</string>
    <string name="numero">No.</string>
    <string name="datos">DATOS</string>
    <string name="resultado_listar">RESULTADO</string>
    <string name="operacion">OPERACIÓN</string>
    <string name="area_rectangulo">Area del Rectangulo</string>
    <string name="area_circulo">Area del Circulo</string>
    <string name="area_cuadrado">Area del Cuadrado</string>
    <string name="area_trinagulo">Area del Triangulo</string>
    <string name="volumen_cilindro">Volumen del Cilindro</string>
    <string name="volumen_cono">Volumen del Cono</string>
    <string name="volumen_cubo">Volumen del Cubo</string>
    <string name="volumen_esfera">Volumen de la Esfera</string>


    <string-array name="lis_opciones">
        <item>@string/opcion_area</item>
        <item>@string/opcion_volumen</item>
        <item>@string/opcion_operaciones_realizadas</item>
    </string-array>

    <string-array name="lis_areas">
        <item>@string/opcion_cuadrado</item>
        <item>@string/opcion_rectangulo</item>
        <item>@string/opcion_triangulo</item>
        <item>@string/opcion_circulo</item>
    </string-array>

    <string-array name="lis_volumenes">
        <item>@string/opcion_esfera</item>
        <item>@string/opcion_cilindro</item>
        <item>@string/opcion_cono</item>
        <item>@string/opcion_cubo</item>
    </string-array>

</resources>
