<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ListarOperaciones">

    <TableLayout
        android:id="@+id/tblOperacionesRea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/flEnunciados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left">

            <TextView
                android:id="@+id/lblNumeroListar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/numero"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOperacion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/operacion"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblDatos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/datos"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/resultado_listar"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</LinearLayout>